# ToDo

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: SettingsPanel.vue  TaskInput.vue  TaskItem.vue  TaskList.vue
src/composables/: useConfig.ts  useTasks.ts
src/types/: task.ts
